# govcon-capture-vibe

./: .env  .gitignore  NEXT_CONVERSATION_PROMPT.md  QUICK_TEST_REFERENCE.md  README.md  RFP_ANALYZER_ROADMAP.md  app.py  config.py  debug_rag.py  lightrag_ollama_demo.py  main.py  pyproject.toml  rfp_pipeline.py  test_processing.py
.github/: README.md  copilot-instructions.md
docs/: FINE_TUNING_ROADMAP.md  FRESH_CONVERSATION_STARTER.md  HARDCODED_VARIABLES_ASSESSMENT.md  Ontology-Based-RAG-for-Government-Contracting-White-Paper.md  PATH_B_IMPLEMENTATION_PLAN.md  RAG_STORAGE_ANALYSIS.md
examples/: sample_compliance_assessment.json  sample_output.json  sample_qfg.json  sample_requirements.json
prompts/: extract_requirements_prompt.txt  shipley_requirements_extraction.txt
rag_storage/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_llm_response_cache.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
rfp_rag_data/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_llm_response_cache.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
src/: __init__.py  config.py  data_models.py  document_processor.py  enhanced_rfp_processor.py  extraction_agent.py  govcon_server.py  knowledge_graph.py  lightrag_rfp_integration.py  llm_utils.py  pydantic_agents.py  rfp_chunking.py  server.py  (+3 more)
(+22 files in other folders)
