[project]
name = "govcon-capture-vibe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lightrag-hku>=1.4.9",
    "nest-asyncio>=1.6.0",
    "ollama>=0.6.0",
    "openpyxl>=3.1.5",
    "pandas>=2.0.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.50.0",
]
